feat(): improve the iteration performance